# CynthiaCMS-installer

./: .gitignore  Cargo.toml  README.md  bananen.json  cyninst-changelog.md  cynthia-plugin-repository.json  plugins.md
src/: main.rs
