[package]
name = "cyninst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
fs_extra = "1.3.0"
inline_colorization = "0.1.5"
normalize-path = "0.2.1"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4.40"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.107"